# aiops2025

./: .gitignore  .gitmodules  README.md  drain3_state.json  pyproject.toml
exp/: abnormal.ipynb  decompression.sh  format.py  log.ipynb  main.py  prepare.py  prepare_data.sh  run.py  test.py  trace.ipynb  utils.py
exp/agent/: judge.py  log.py  metric.py  rca.py  trace.py
exp/prompt/: agent.py
exp/template/: drain3_config.yaml  drain3_log.ini
exp/utils/: input.py  log.py  time.py
scripts/: clear.sh  decompression.sh
