[project]
name = "aiops2025"
version = "0.1.0"
dependencies = [
    "annotated-types==0.7.0",
    "anyio==4.9.0",
    "asyncio==3.4.3",
    "certifi==2025.7.14",
    "distro==1.9.0",
    "h11==0.16.0",
    "h5py==3.14.0",
    "httpcore==1.0.9",
    "httpx==0.28.1",
    "idna==3.10",
    "jiter==0.10.0",
    "joblib==1.5.1",
    "llvmlite==0.44.0",
    "numba==0.61.2",
    "numpy==2.2.6",
    "openai==1.97.0",
    "pandas==2.3.1",
    "pip==25.1.1",
    "pyarrow==21.0.0",
    "pydantic==2.11.7",
    "pydantic_core==2.33.2",
    "python-dateutil==2.9.0.post0",
    "pytz==2025.2",
    "ruptures==1.1.9",
    "scikit-learn==1.6.1",
    "scipy==1.16.0",
    "setuptools==68.0.0",
    "six==1.17.0",
    "sniffio==1.3.1",
    "threadpoolctl==3.6.0",
    "tqdm==4.67.1",
    "tslearn==0.6.4",
    "typing_extensions==4.14.1",
    "typing-inspection==0.4.1",
    "tzdata==2025.2"
]